--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,21 @@
     margin: 0 10px;
 }
 /* Header Style */
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 200px 0;
+}
+.header h1 {
+    font-size: 30px;
+    text-transform: uppercase;
+    margin-bottom: 5px; 
+}
+.header h4 {
+    font-size: 20px;
+    margin-top: 5px;
+}
 /* Feature Section Style */
 /* Blog Section Style */
 /* Footer Style */
